--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ html {
 body {
     background: rgb(35, 35, 35);
     color: aqua;
+    font-family: 'Permanent Marker', cursive;
 }
 
 .container {
@@ -20,8 +21,8 @@ body {
 }
 
 .square {
-    height: 30vh;
-    width: 30vw;
+    height: 28vh;
+    width: 28vw;
     text-align: center;
     line-height: 30vh;
     font-size: 14.4rem;
@@ -43,5 +44,5 @@ body {
     align-items: center;
     padding: 5px;
     margin: 5px;
-    font-size: 1.6rem;
+    font-size: 3.6rem;
 }
