--- a/style.css
+++ b/style.css
@@ -21,10 +21,10 @@ body {
 }
 
 .square {
-    height: 28vh;
+    height: 25vh;
     width: 28vw;
     text-align: center;
-    line-height: 30vh;
+    line-height: 25vh;
     font-size: 14.4rem;
 }
 
@@ -44,5 +44,5 @@ body {
     align-items: center;
     padding: 5px;
     margin: 5px;
-    font-size: 3.6rem;
+    font-size: 3.2em;
 }
